# LatticeUrbanWind

./: .gitignore  AGENTS_PROJECT.md  LICENSE.md  README.md  README.txt  conf.txt  conf1.txt  install_linux.sh  install_win.cmd  logfile  requirements.txt  start.py  submit_cfd_silent.sh  temp.py  template-conf.txt
bridge/: 1_tool_cdfInspect.py  1_tool_shpInspect.py  2_buildBC.py  3_voxelization.py  4_validation.py  5_postTranslate.py  6_post_vtk_nc.py  tool_cdfInspect.py  tool_shpInspect.py  validation.py  voxelization.py  vtk_nc_cut.py
caseData/: ParaviewState.pvsm  x3dparaview.pvsm
cfdCore/FluidX3D/: FluidX3D.vcxproj  backup.txt  makefile
core/: accelerator_runtime.py  deck_io.py  deck_schema.json  deck_schema.py  luw_progress.py  terr_voxel_config.py  terr_voxel_gpu.py
core/bridge_core/: 1_buildBC.py  1_buildBC_with_dem.py  2_shpCutter.py  3_voxelization.py  3_voxelization_legacy.py  auto_UTM.py  dem_tif_to_shp.py  terrainreader.py
core/datagen_core/: dgPrepare_stlinput.py
core/tools_core/: GUI.py  batch_tke_geo_viz.py  buildingscale.py  cdfInspect.py  cleanluw.py  les_spectra.py  makeluw.py  prerunValidate.py  season_average.py  shpInspect.py  shpTester.py  tke_viz.py  transluw.py  visdem.py  visluw.py  vtk2nc.py  vtk2nc_new.py  vtk_avg_to_utm_asl_nc.py
dataProc/: postTranslate.py  vtk_nc.py
example/: conf.luw
examples/example_DatasetGen/: conf.luwdg
examples/example_NWP-LBM/: conf.luw
examples/example_ProfileResearch/: conf.luwpf
gui/: CMakeLists.txt  README.md  build.ps1  deploy.ps1  preferences.json  run.ps1
gui/build-vs2022/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  LUWStudio.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  luw_studio.vcxproj  luw_studio.vcxproj.filters
gui/build-vs2022/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
gui/build-vs2022/luw_studio.dir/Debug/: luw_studio.exe.recipe
gui/build-vs2022/luw_studio.dir/Debug/luw_studio.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
gui/build-vs2022/luw_studio.dir/Release/: luw_studio.exe.recipe
gui/build-vs2022/luw_studio.dir/Release/luw_studio.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
gui/build-vs2022/luw_studio_autogen/: mocs_compilation_Debug.cpp  mocs_compilation_Release.cpp
gui/build-vs2022/luw_studio_autogen/include_Debug/S3YOOGFUTE/: moc_BatchBoundaryPanel.cpp  moc_BatchBoundaryPanel.cpp.d  moc_BoundaryCsvPanel.cpp.d  moc_BuildingScalePanel.cpp  moc_BuildingScalePanel.cpp.d  moc_CommandRunner.cpp.d  moc_ConfigDocument.cpp  moc_ConfigDocument.cpp.d  moc_ConsolePanel.cpp  moc_ConsolePanel.cpp.d  moc_MainWindow.cpp.d  moc_PlotWidgets.cpp  moc_PlotWidgets.cpp.d  moc_ProgressPanel.cpp  moc_ProgressPanel.cpp.d  moc_StartupSplash.cpp.d  moc_VtkViewWidget.cpp  moc_VtkViewWidget.cpp.d  moc_WavenumberPanel.cpp  moc_WavenumberPanel.cpp.d
gui/build-vs2022/luw_studio_autogen/include_Release/AWXS5TJIQC/: moc_ViewerWidget.cpp  moc_ViewerWidget.cpp.d
gui/build-vs2022/luw_studio_autogen/include_Release/S3YOOGFUTE/: moc_BatchBoundaryPanel.cpp.d  moc_BoundaryCsvPanel.cpp  moc_BoundaryCsvPanel.cpp.d  moc_BuildingScalePanel.cpp.d  moc_CommandRunner.cpp  moc_CommandRunner.cpp.d  moc_ConfigDocument.cpp  moc_ConfigDocument.cpp.d  moc_ConsolePanel.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_PlotWidgets.cpp.d  moc_ProgressPanel.cpp.d  moc_StartupSplash.cpp  moc_StartupSplash.cpp.d  moc_VtkViewWidget.cpp  moc_VtkViewWidget.cpp.d  moc_WavenumberPanel.cpp  moc_WavenumberPanel.cpp.d
gui/build-vs2022/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
gui/build-vs2022/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
gui/build-vs2022/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
gui/build-vs2022/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
gui/build-vs2022/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
gui/build-vs2022/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.write.1.tlog
gui/build-vs2022/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
gui/build-vs2022/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog
gui/include/luwgui/: BatchBoundaryPanel.h  BoundaryCsvPanel.h  BuildInfo.h.in  BuildingScalePanel.h  CommandRunner.h  ConfigDocument.h  ConfigSchema.h  ConsolePanel.h  MainWindow.h  PlotWidgets.h  Preferences.h  ProgressPanel.h  RuntimePaths.h  StartupDiagnostics.h  StartupSplash.h  Theme.h  VtkViewWidget.h  WavenumberPanel.h
gui/src/: BatchBoundaryPanel.cpp  BoundaryCsvPanel.cpp  BuildingScalePanel.cpp  CommandRunner.cpp  ConfigDocument.cpp  ConfigSchema.cpp  ConsolePanel.cpp  MainWindow.cpp  PlotWidgets.cpp  Preferences.cpp  ProgressPanel.cpp  RuntimePaths.cpp  StartupDiagnostics.cpp  StartupSplash.cpp  Theme.cpp  VtkViewWidget.cpp  WavenumberPanel.cpp  main.cpp
gui/src/assets/img/: logo.psd
gui/src/streamcenter/: ColorMapCatalog.cpp  ColorMapCatalog.h  NvidiaFrucRuntime.cpp  NvidiaFrucRuntime.h  ViewerWidget.cpp  ViewerWidget.h
gui/src/streamcenter/index/: IndexOpenGLCanvas.cpp  IndexOpenGLCanvas.h  IndexRuntime.cpp  IndexRuntime.h  IndexScene.cpp  IndexScene.h  IndexVolumeBackend.cpp  IndexVolumeBackend.h  IndexVolumeData.cpp  IndexVolumeData.h
installer/: 0_detect_env.cmd  0_detect_env.sh  1_env_var.cmd  1_env_var.sh  2_setup_python.sh  2_setup_python_legacy.cmd  2_setup_python_venv.cmd  3_compile_cfdcore.cmd  3_compile_cfdcore.sh  3_detect_opencl.cmd  3_detect_opencl.py  requirements.txt
project_template/: conf.luw
run/: readme.txt
tests/: test_deck_io.py  test_terr_voxel_config.py
(+54 files in other folders)
